<resources>
    <string name="app_name">腐蚀测厚机器人</string>
    <string name="save_success">保存成功</string>
    <string name="save_faile">保存失败</string>
    <string name="start_video">开始录制</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="power_on">开机</string>
    <string name="power_off">关机</string>
    <string name="content_media_recorder_result">屏幕录制成功，路径：%1$s</string>
    <string name="aksd">qad &amp; ada</string>
    <string name="image_list">图片列表</string>
    <string name="video_list">视频列表</string>
    <string name="no_data">暂无数据</string>
    <string name="remove_sure">您确定要删除此项数据吗？</string>

    <string name="main_supply">主电源</string>
    <string name="other_supply">备用电源</string>
    <string name="current_supply">当前使用电源：</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="auto">自动</string>
    <string name="movement">手动</string>

    <string name="battery_show_title">电量低于保护电量，请及时补充电量</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_startup_and_operation">设备开机与操作</string>
    <string name="jump">跳过</string>
    <string name="small">最小化</string>
    <string name="user_info">说明书</string>

    <string name="first_fragment_first_step">1、取出测厚仪，按电源键打开测厚仪;</string>
    <string name="first_fragment_second_step">2、取出机器人，将电池放入机器人电池仓;</string>
    <string name="first_fragment_three_step">3、将遥控器顶部两侧金属开关向内拨动;</string>
    <string name="first_fragment_four_step">4、点击机器人按钮，等待遥控器不再发出提示音， \n \t\t\t表机器人开机完成并于遥控器建立连接。</string>
</resources>